Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -2092,8 +2092,28 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >> >> contoh : <br/>
 >> >> `Accept: application/json`
 >> >> <br/>
->> >> 
->> >> 
+>> >>  <br/>
+>> >> (3) User-Agent Header : <br/>
+>> >> -> ini memberitahu Server mengenai Browser atau Operating System yang meelakukan Request. <br/>
+>> >> <br/>
+>> >> -> Contoh : <br/>
+>> >>  
+>> >>    ```
+>> >>      User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64)
+>> >>     ```
+>> >> [-] `User-Agent` <br/>
+>> >> merupakan identifikasi mengenai Identitas Client, yang mana biasanya mengandung infomasi mengenai Browser atau Operating System yang digunakan Client untuk membuat Request. <br/>
+>> >> <br/>
+>> >> [-] `Mozilla/5.0` <br/>
+>> >> ini memberitahu bahwa Client menggunakan Browser "Mozilla" dengan versi "5.0" <br/>
+>> >> <br/>
+>> >> [-] `(Windows NT 10.0; Win64; x64)` <br/>
+>> >> - "Windows NT 10.0" memiliki arti bahwa Client menggunakan Operating System Windows 10. <br/>
+>> >> dan "NT" tersebut memiliki kepanjangan 'New Technology' <br/>
+>> >> -"Win64" memiliki arti bahwa Operating System tersebut memiliki '64-bit version of Windows' (Windows Versi 64 bit). <br/>
+>> >> - `x64` memiliki arti bahwa "Arsitektur CPU adalah 64-bit" (CPU Architecture is 64-bit)  <br/>
+>> >> <br/>
+>> >> <br/>
 >> >> 
 >> >> ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ <br/>
 >>
