Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -2115,6 +2115,55 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >> >> - `x64` memiliki arti bahwa "Arsitektur CPU adalah 64-bit" (CPU Architecture is 64-bit)  <br/>
 >> >> <br/>
 >> >> <br/>
+>> >>
+>> >> ### B) HTTP Parameter <br/>
+>> >> <br/>
+>> >> -> Parameter itu seperti Extra Details yang ditambahkan ke URL untuk memberitahu Server secara lebih spesifik Data apa yang kita inginkan. <br/>
+>> >> <br/>
+>> >> -> Terdapat 2 jenis utama Parameter, yaitu "Query Parameters" & "Path Parameters" <br/>
+>> >> <br/>
+>> >> #### [1] Query Parameters : <br/>
+>> >> -> Query Parameter ditambahkan "pada akhir URL". <br/>
+>> >> yang mana Query Parameter berada setelah "?" (tanda tanya), <br/>
+>> >> kemudian menuliskan "Key Value Pair". <br/>
+>> >> <br/>
+>> >> -> Jika lebih dari satu Key Value Pair, kita perlu manuliskan "&" sebagai pemisah diantara masing-masing Key Value Pair. <br/>
+>> >> Tetapi jika terdapat hanya satu Key Value Pair, kita tidak perlu memakai "&". <br/>
+>> >> <br/>
+>> >> [-] Format penulisan Query Parameter dengan "Single Key Value Pair" (Satu Key Value Pair) : <br/>
+>> >> ```
+>> >> https://example.com/page?key=value
+>> >> ```
+>> >> 
+>> >> [-]  Format penulisan Query Parameter dengan "Multiple Key Value Pair" (Beberapa Key Value Pair) : <br/>
+>> >> ```
+>> >> https://example.com/page?key1=value1&key2=value2
+>> >> ```
+>> >> <br/>
+>> >> [-] Contoh Request dengan Query Parameter :
+>> >> ```
+>> >> GET https://api.example.com/products?category=shoes&sort=price
+>> >> ```
+>> >> (1) Pada Request diatas, yang merupakan Query Parameter adalah : 
+>> >> ```
+>> >> ?category=shoes&sort=price
+>> >> ```
+>> >> 
+>> >> (2) `category=shoes` <br/>
+>> >> ini merupakan "Key Value Pair", yang mana : <br/>
+>> >> - Key = `category` <br/>
+>> >> - Value = `shoes` <br/>
+>> >> Key Value Pair ini memiliki arti agar Server hanya mengirimkan "Data Shoes" (Data Sepatu) ke Client, <br/>
+>> >> dan Server tidak perlu mengirim data lainnya yang bukan merupakan Data Sepatu. <br/>
+>> >> <br/>
+>> >> (3) `sort=price` <br/>
+>> >> ini merupakan "Key Value Pair", yang mana :  <br/>
+>> >> - Key : `sort` <br/>
+>> >> - Value : `price` <br/>
+>> >> Key Value Pair ini memiliki arti agar Server memberikan Data ke Client dalam keadaan yang sudah di-Sort berdasarkan Price (sudah diurutkan berdasarkan Harga). <br/>
+>> >> Biasanya Sort ini dari harga terendah hingga harga tertinggi (ascending). <br/>
+>> >> 
+>> >> 
 >> >> 
 >> >> ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ <br/>
 >>
