Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -2130,10 +2130,10 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >> >> -> Jika lebih dari satu Key Value Pair, kita perlu manuliskan "&" sebagai pemisah diantara masing-masing Key Value Pair. <br/>
 >> >> Tetapi jika terdapat hanya satu Key Value Pair, kita tidak perlu memakai "&". <br/>
 >> >> <br/>
->> >> [-] Format penulisan Query Parameter dengan "Single Key Value Pair" (Satu Key Value Pair) : 
->> >> 	```
->> >>	 https://example.com/page?key=value
->> >> 	```
+>> >> [-] Format penulisan Query Parameter dengan "Single Key Value Pair" (Satu Key Value Pair) : <br/> 
+>> >> 	
+>> >>		 https://example.com/page?key=value
+>> >> 
 >> >> 
 >> >> [-]  Format penulisan Query Parameter dengan "Multiple Key Value Pair" (Beberapa Key Value Pair) : 
 >> >> ```
