Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -2120,9 +2120,9 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >> >> <br/>
 >> >> -> Parameter itu seperti Extra Details yang ditambahkan ke URL untuk memberitahu Server secara lebih spesifik Data apa yang kita inginkan. <br/>
 >> >> <br/>
->> >> -> Terdapat 2 jenis utama Parameter, yaitu "Query Parameters" & "Path Parameters" <br/>
->> >> <br/>
->> >> #### [1] Query Parameters : <br/>
+>> >> -> Terdapat 2 jenis utama Parameter, yaitu "Query Parameters" & "Path Parameters" <br/> <br/> 
+>> >> 
+>> >> #### [1] Query Parameters : 
 >> >> -> Query Parameter ditambahkan "pada akhir URL". <br/>
 >> >> yang mana Query Parameter berada setelah "?" (tanda tanya), <br/>
 >> >> kemudian menuliskan "Key Value Pair". <br/>
@@ -2161,8 +2161,32 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >> >>	 - Key : `sort` <br/>
 >> >>	 - Value : `price` <br/>
 >> >> Key Value Pair ini memiliki arti agar Server memberikan Data ke Client dalam keadaan yang sudah di-Sort berdasarkan Price (sudah diurutkan berdasarkan Harga). <br/>
->> >> Biasanya Sort ini dari harga terendah hingga harga tertinggi (ascending). <br/>
+>> >> Biasanya Sort ini dari harga terendah hingga harga tertinggi (ascending). <br/> <br/>
 >> >> 
+>> >> #### [2] Path Parameters : 
+>> >> -> Path Parameter merupakan bagian dari URL tanpa menggunakan "?" (tanda tanya) dan tanpa menggunakan "&" (tanda 'dan'). <br/> 
+>> >> <br/> 
+>> >> -> Contoh Request dengan Path Parameters :  <br/> 
+>> >> 		```
+>> >> 		https://api.example.com/users/123
+>> >> 		```
+>> >> [-] Pada Request diatas, yang merupakan Path Parameters adalah : <br/> 
+>> >>	 ```
+>> >> 	/users/123
+>> >> 	```
+>> >> Path Parameter diatas memiliki arti yaitu : <br/> 
+>> >> Request memberitahu Server agar hanya mengirim Data ke Client, yaitu Data User yang memiliki ID 123 <br/>  
+>> >> (User yang memiliki User's ID = 123) <br/>  
+>> >> Dan Server tidak perlu mengirimkan Data selain Data User yang memiliki User's ID = 123 <br/> 
+>> >> <br/> 
+>> >> [-] `/users` <br/> 
+>> >> ini menunjukkan Endpoint yang ingin kita akses. <br/> 
+>> >> Dalam Case ini, kita ingin meng-akses "Data Users" <br/> 
+>> >> <br/> 
+>> >> [-] `/123` <br/> 
+>> >> ini menunjukkan "Unique Identifier" pada Data. <br/> 
+>> >> ("Unique Identifier" merupakan Nilai yang bersifat unik dan dapat menjadi pembeda antara satu data dengan data lainnya). <br/> 
+>> >> Dalam Case ini, kita hanya meminta Data User yang memiliki ID 123 . <br/> 
 >> >> 
 >> >> 
 >> >> ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ <br/>
