Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1979,7 +1979,7 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >> Misalnya Endpoint User adalah  `https://api.example.com/users/123`  <br/>
 >> ( `https://api.example.com/users/123` merupakan spesifik address yang menunjukkan Dimana Data User Dapat diaskes pada Server)  <br/>
 >>  <br/>
->> -> untuk Request, kita gunakan HTTP Method "GET" untuk mengambil Data.  <br/>
+>> -> untuk Request, sebagai contoh kita gunakan HTTP Method "GET" untuk mengambil Data.  <br/>
 >> Contoh Request dengan HTTP METHOD "GET" : 
 >>	 ```
 >>	 GET https://api.example.com/users/123
