Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -2189,8 +2189,22 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >> >> Dalam Case ini, kita hanya meminta Data User yang memiliki ID 123 . <br/> 
 >> >> 
 >> >> 
->> >> ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ <br/>
->>
+>> >> ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ <br/> <br/>
+>> 
+>> [2] Step 2 : Server menerima Request dan menafsirkan Request tersebut <br/>
+>> (Server receives Request and Server interpret Request tersebut) <br/>
+>> <br/>
+>> -> Server menafsirkan Request berikut ini : <br/>
+>>	 ```
+>>	 GET https://api.example.com/users/123
+>>	 ```
+>> [-] `GET` <br/>
+>> ini berarti Client meminta untuk "Mengambil Data" (mengambil data User yang memiliki ID 123) <br/>
+>> <br/>
+>> [-] Kemudian Server mengecek apakah Client memiliki wewenang untuk meng-akses data, jika iya, berarti Request tersebut Valid, dan Server akan memverifikasi Request tersebut. <br/>
+>> 
+>> 
+>> 
 >> 
 >> 
 >> -------
