Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -2192,7 +2192,7 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >> >> ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ <br/> <br/>
 >> 
 >> [2] Step 2 : Server menerima Request dan menafsirkan Request tersebut <br/>
->> (Server receives Request and Server interpret Request tersebut) <br/>
+>> (Server receives Request and Server interpret that Request ) <br/>
 >> <br/>
 >> -> Server menafsirkan Request berikut ini : <br/>
 >>	 ```
