Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -2202,11 +2202,31 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >> ini berarti Client meminta untuk "Mengambil Data" (mengambil data User yang memiliki ID 123) <br/>
 >> <br/>
 >> [-] Kemudian Server mengecek apakah Client memiliki wewenang untuk meng-akses data, jika iya, berarti Request tersebut Valid, dan Server akan memverifikasi Request tersebut. <br/>
+>> <br/>
+>> <br/>
+>> [3] Step 3 : Server Fetches Data from Database <br/>
+>> <br/>
+>> -> Setelah Request mendapat wewenang & ter-validasi (setelah Request ter-authorsasi & ter-validasi), <br/>
+>> Kemudian Server berinteraksi dengan Database atau internal Services lainnya untuk mengambil User Data. <br/>
+>> <br/>
+>> (Setelah proses Authorisasi & validasi, kemudian server berinteraksi dengan Database dan internal Services lainnya untuk Retrieve Data (mengambil data)).
+>> <br/>
+>> -> Data yang diambil dari Datbase biasanya dalam bentuk "Raw Format", kemudian Data tersebut perlu dikonversikan (diubah) menjadi Format yang mudah dibaca, seperti JSON (Javascript Object Notation). <br/>
+>> <br/>
+>> -> Raw Data untuk setiap Database dapat berbeda-beda bentuknya, ada yang dalam Tabular Format (Format Tabel), CSV Format, ObjectId Format, XML Format, dan lain sebagainya. <br/>
+>> <br/>
+>> ->  Contoh JSON Format :  
+>> 	```
+>> 	{
+>> 	  "user_id": 1,
+>> 	  "first_name": "John",
+>> 	  "last_name": "Doe",
+>> 	  "email": "john@example.com"
+>> 	}
+>> 	
+>> 	```
 >> 
->> 
->> 
->> 
->> 
+>>  
 >> -------
 >> 
 >>  ### {3} **REST API in GraphQL** <br/>
