Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -2226,7 +2226,27 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >> 	
 >> 	```
 >> 
->>  
+>>  [4] Step 4 : Server Sends a Response to the Client   <br/>
+>> (Server mengirim Response ke Client)  <br/>
+>>  <br/>
+>> -> Server mengirim HTTP Response yang berisi Data,   <br/>
+>> yang mana Server mengirimkan HTTP Response tersebut ke Client.  <br/>
+>>  <br/>
+>> -> Server mengirim "Status Code" bersamaan dengan HTTP Response,  <br/> 
+>> yang mana jika semuanya berjalan dengan baik, maka Status Code tersebut adalah "HTTP 200 OK"  <br/>
+>>   <br/>
+>> -> Contoh HTTP Response (yang juga berisi Status Code) :  <br/>
+>> ```
+>> Status: 200 OK
+>> {
+>>   "id": 123,
+>>   "name": "John Doe",
+>>   "email": "johndoe@example.com"
+>> }
+>> 
+>> ```
+>>
+>>
 >> -------
 >> 
 >>  ### {3} **REST API in GraphQL** <br/>
