Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -2236,8 +2236,8 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >> -> Server mengirim "Status Code" bersamaan dengan HTTP Response,  <br/> 
 >> yang mana jika semuanya berjalan dengan baik, maka Status Code tersebut adalah "HTTP 200 OK"  <br/>
 >>   <br/>
->> -> Contoh HTTP Response (yang juga berisi Status Code) : 
->> 	 ```
+>> -> Contoh HTTP Response (yang juga berisi Status Code) :  <br/>
+>> 	
 >> 	 Status: 200 OK
 >> 	 {
 >> 	   "id": 123,
@@ -2245,7 +2245,7 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >> 	   "email": "johndoe@example.com"
 >> 	 }
 >> 	 
->> 	 ```
+>> 	
 >>
 >>
 >> --------
