Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -2246,8 +2246,19 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >> 			}
 >> 			
 >> 			
->> 
->> 
+>> <br/>
+>> [5] Step 5 : Client Receives and Processes The Data  <br/>
+>> (Client menerima dan memproses Data) <br/>
+>> <br/>
+>> -> Client (seperti Mobile App) menerima "Response berupa JSON" (pada contoh ini, format data untuk Response adalah JSON) <br/>
+>> dan kemudian Client memproses Response Data tersebut (seperti menampilkannya pada Layar). <br/>
+>> <br/>
+>> -> Jika terdapat error, "Error Message" juga dikirim di dalam Response Body. <br/>
+>> "Error Message" merupakan informasi spesifik mengapa error bisa terjadi. <br/>
+>> <br/>
+>> (selain JSON, format data lainnya untuk Response dapat berupa HTML, XML, Plain Text, HTML, CSV, YAML, dan sebagainya) <br/>
+>>  <br/>
+>> <br/>
 >> 
 >> ---------
 >>  ### {3} **REST API in GraphQL** <br/>
