Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -2255,10 +2255,19 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >> (selain JSON, format data lainnya untuk Response dapat berupa HTML, XML, Plain Text, HTML, CSV, YAML, dan sebagainya) <br/>
 >> <br/>
 >> -> Jika terdapat error, "Error Message" juga dikirim di dalam Response Body. <br/>
->> "Error Message" merupakan informasi spesifik mengapa error bisa terjadi. <br/>
->> <br/>
+>> "Error Message" merupakan informasi spesifik mengapa error bisa terjadi. <br/>  <br/> <br/>
 >> 
->>  <br/>
+>> 
+>> 
+>> 
+>> #### D) Stateless in REST API <br/>
+>> #### (REST API bersifat Stateless) <br/>
+>> <br/> 
+>> -> Definition :  <br/>
+>> Dalam REST API, "Statelessness" berarti Server tidak menyimpan informasi apapun diantara Request satu dengan Request lainnya. <br/>
+>> <br/>
+>> -> Setiap Request dari Client ke Server harus mengandung semua informasi yang diperlukan untuk memproses Request tersebut, <br/>
+>> Sehingga System tidak perlu untuk menyimpan Informasi dari Request sebelumnya. <br/>
 >> <br/>
 >> 
 >> ---------
