Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -2269,6 +2269,18 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >> -> Setiap Request dari Client ke Server harus mengandung semua informasi yang diperlukan untuk memproses Request tersebut, <br/>
 >> Sehingga System tidak perlu untuk menyimpan Informasi dari Request sebelumnya. <br/>
 >> <br/>
+>>
+>> -> "State" adalah informasi atau Context yang biasanya disimpan atau di-ingat oleh System. <br/>
+>> <br/>
+>> -> Pada System yang Stateless, <br/>
+>>  setiap Request diperlakukan sebagai Independen dan tidak bergantung pada "State" yang  disimpan oleh Server dari Request sebelumnya. <br/>
+>> <br/>
+>> -> Pada Stateless System, Server tidak mengetahui apapun mengenai Request sebelumnya setelah Response dari Request tersebut terkirim. <br/>
+>> <br/>
+>> -> Setelah Request yang sebelumnya terpenuhi :  <br/>
+>> Request yang baru tidak bergantung pada State apapun yang disimpan oleh Server, <br/>
+>> sehingga Client harus menyertakan semua Informasi yang diperlukan untuk setiap Request. <br/>
+>> <br/>
 >> 
 >> ---------
 >>  ### {3} **REST API in GraphQL** <br/>
