Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -2281,6 +2281,15 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >> Request yang baru tidak bergantung pada State apapun yang disimpan oleh Server, <br/>
 >> sehingga Client harus menyertakan semua Informasi yang diperlukan untuk setiap Request. <br/>
 >> <br/>
+>> <br/>
+>> -> "No Session Tracking" : <br/>
+>> tidak ada "Session Tracking", yang berarti REST API tidak perlu menyimpan Session atau Data User diantara satu Request dengan Request lainnya. <br/>
+>> <br/>
+>> -> "Session Tracking" merupakan cara bagi Web Server untuk mengingat hal Detail tentang User pada antar berbagai Request. <br/>
+>> yang mana Session Tracking memungkinkan kita untuk tetap Log In, dan menyimpan User Preference. <br/>
+>> <br/>
+>> <br/>
+>>
 >> 
 >> ---------
 >>  ### {3} **REST API in GraphQL** <br/>
