Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -2283,9 +2283,9 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >> <br/>
 >> <br/>
 >> -> "No Session Tracking" : <br/>
->> tidak ada "Session Tracking", yang berarti REST API tidak perlu menyimpan Session atau Data User diantara satu Request dengan Request lainnya. <br/>
+>> [-] tidak ada "Session Tracking", yang berarti REST API tidak perlu menyimpan Session atau Data User diantara satu Request dengan Request lainnya. <br/>
 >> <br/>
->> -> "Session Tracking" merupakan cara bagi Web Server untuk mengingat hal Detail tentang User pada antar berbagai Request. <br/>
+>> [-] "Session Tracking" merupakan cara bagi Web Server untuk mengingat hal Detail tentang User pada antar berbagai Request. <br/>
 >> yang mana Session Tracking memungkinkan kita untuk tetap Log In, dan menyimpan User Preference. <br/>
 >> <br/>
 >> <br/>
