Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -2290,6 +2290,13 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >> <br/>
 >> <br/>
 >>
+>> -> Scalability :  <br/>
+[-] Statelessness membantu menskalakan System karena setiap Request bersifat Independen sehingga Setiap Request bisa ditangani oleh Server manapun (tidak masalah Server mana yang menangani Request tersebut). <br/>
+>> <br/>
+>> [-] Statelessness mempermudah untuk menskalakan System (Statelessness makes it easier to Scale System). <br/>
+>> Karena Request bersifat Independen, Kita dapat mendistribusikan Request ke banyak Server (Multiple Server) <br/>
+>> tanpa harus khawatir Server mana yang menyimpan "State" untuk Interaksi sebelumnya yang berhubungan dengan Request yang saat ini diminta Client. <br/>
+>>
 >> 
 >> ---------
 >>  ### {3} **REST API in GraphQL** <br/>
