--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -2296,7 +2296,59 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >> [-] Statelessness mempermudah untuk menskalakan System (Statelessness makes it easier to Scale System). <br/>
 >> Karena Request bersifat Independen, Kita dapat mendistribusikan Request ke banyak Server (Multiple Server) <br/>
 >> tanpa harus khawatir Server mana yang menyimpan "State" untuk Interaksi sebelumnya yang berhubungan dengan Request yang saat ini diminta Client. <br/>
->>
+>> <br/>
+>> [-] Pada Stateful System, Saat User membuat Multiple Requests,  <br/>
+>> yang mana Multiple Requests berhubungan antara satu sama lain sehingga Server perlu berinteraksi dengan Aplikasi dari waktu ke waktu. <br/>
+>> ini berarti setelah Request Pertama, Request berikutnya harus diarahkan ke Server yang sama  yang menyimpan State untuk Session tersebut, <br/>
+>> yang mana ini disebut "Session Stickiness" atau "Session Affinity". <br/>
+>> (Request Pertama & Request berikutnya merupakan Request yang saling berhubungan, sehingga Request-request tersebut perlu ditangani oleh Server yang sama, yakni Server yang menyimpan State untuk informasi mengenai Request sebelumnya, yang mana Request sebelumnya tersebut berhubungan dengan Request saat ini )
+>> <br/>
+>> >> ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+>> >>  ^For your information^ <br/>
+>> >> #### {1} Session Stickiness & Session Affinity :  <br/>
+>> >> "Session Stickiness" dan "Session Affinity" merupakan Dua Istilah yang dipakai pada Distributed System, Load Balancing, dan Web Application. <br/>
+>> >> "Session Stickiness" dan "Session Affinity" merujuk pada praktik yang mengarahkan User's Request (Request dari User) ke Server yang sama selama <br/> Durasi Sesi tersebut (selama durasi sesi miliki Request-Request yang saling berkaitan tersebut) untuk mempertahankan Stateful Interactions. <br/>
+>> >>  <br/>
+>> >> {1} Session Stickiness :  <br/>
+>> >> ->  merujuk pada perilaku yang mengarahkan User's Request (Request dari User) ke Backend Server yang sama yang menangani Request yang pertama. <br/>
+>> >> -> hal ini diperlukan karena Server butuh untuk mengingat informasi tentang User atau Session mereka (seperti Login State, barang pada Shopping <br/> Cart, User Preference, dan sebagainya) <br/>
+>> >> -> Cara Kerja "Session Stickiness" : <br/>
+>> >>  Pada System Load-Balancing, Multiple Backend Server (beberapa Server) dapat tersedia untuk menangani banyak Request. <br/>
+>> >> Namun, jika User's Session Data (Session Data milik User) disimpan pada sebuah Server tertentu, maka System butuh memastikkan semua Request <br/> berikutnya yang dibuat oleh User yang sama, Request tersebut akan diarahkan ke Server yang sama untuk menjaga kontinuitas (maintain continuity). <br/>
+>> >> yang mana, Mekanisme Routing ini disebut "Session Stickiness." <br/>
+>> >> <br/>
+>> >> {2} Session Affinity : <br/>
+>> >> -> Session Affinity merupakan nama lain dari Session Stickiness, <br/>
+>> >> yang mana Session Affinity mendeskripsikan mekanisme untuk menjaga keberlangsungan User's Session (to maintain User's Session Continuity). <br/>
+>> >> -> Session Affinity merujuk pada mekanisme untuk menjaga User's Session selalu diarahkan ke Server yang sama selama Durasi untuk Session tersebut. <br/>
+>> >> <br/>
+>> >> -> Cara Kerja Session Affinity : <br/>
+>> >> Session Affinity memastikkan bahwa Load Balancer secara konsisten memberi Rute untuk Request yang berasal dari User yang sama (atau Session yang sama), yang mana Rute tersebut mengarahkan ke Backend Server yang sama. <br/>
+>> >> Hal ini bisa dilakukan dengan cara : <br/>
+>> >> (1)  Cookies : <br/>
+>> >> [-] Load Balancer dapat mengatur "Session Cookie" yang secara unik mengidentifikasi Server yang menangani User's Session, <br/>
+>> >> yang mana Request selanjutnya akan membawa Cookie ini untuk memastikkan Request diberikan Rute ke Server yang tepat (Request selanjutnya merupakan milik User yang sama dengan Request yang sebelumnya). <br/>
+>> >> <br/>
+>> >> [-] Load Balancer dapat mengatur sebuah "Session Cookie" yang berisi informasi unik (seperti "Session ID") yang mengidentifikasi Server yang menangani User's Session (Sesi Pengguna). <br/>
+>> >> Dengan cara ini, Request selanjutnya dari User yang sama akan membawa Cookie tersebut, sehingga Load Balancer dapat memutuskan untuk mengarahkan Request tersebut ke "Server yang sama" yang menangani Sesi Pengguna sebelumnya (User's Session sebelumnya). <br/>
+>> >> Berikut ini Rincian Cara Kerjanya : <br/>
+>> >> <1> Pertama kali User Mengunjungi Aplikasi : <br/>
+>> >>  - User akan mengirimkan Request ke Server. 
+>> >>  - "Load Balancer" memilih Server untuk menangani Request ini, misalnya "Server A". 
+>> >>  - "Server A" akan memproses Request dan menetapkan "Session Cookie" di Browser Pengguna. <br/>
+>> >> Cookie ini berisi informasi unik, yang biasanya berupa "Session ID" (misalnya session_id=abd123 ), <br/>
+>> >> yang mana 'Session ID' tersebut digunakan untuk mengidentifikasi Sesi Pengguna (User's Session) tersebut. <br/>
+>> >>  <br/>
+>> >> <2> Request Selanjutnya : <br/>
+>> >> - Ketika User mengirimkan "Request Selanjutnya", Browser akan secara otomatis mengirimkan Session Cookie yang berisi "Session ID" yang sama (seperti Session ID yang sama dengan Request sebelumnya, yaitu session_id=abc123). <br/>
+>> >> - "Load Balancer" menerima Request ini dan membaca Session ID dari Cookie. 
+>> >> - Berdasarkan "Session ID" yang ada di Cookie, "Load Balancer" mengetahui bahwa Request ini berasal dari User yang sama dan harus diarahkan ke "Server A" (Server yang menangani Session Pertama, yakni pada Session tersebut 'Request Pertama' diproses)
+>> >> <br/>
+>> >> <3> Menjaga Konsistensi Session : <br/>
+>> >>  - Dengan cara ini, "Load Balancer" memastikkan seluruh Sesi Pengguna (User's Session) diproses oleh "Server yang sama" sepanjang sesi tersebut berlangsung. <
+>> >>  - Hal ini menjaga Konsistensi Data Sesi Pengguna, yakni memastikkan bahwa Data terkait Pengguna (User) tetap tersedia selama User berinteraksi dengan Aplikasi atau Website (seperti memastikkan informasi User's Login, User's Preference, dan Informasi Shopping Cart tetap tersedia).
+>> >> 
+>> ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 >> 
 >> ---------
 >>  ### {3} **REST API in GraphQL** <br/>
