Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -2337,16 +2337,16 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >> >>  - "Load Balancer" memilih Server untuk menangani Request ini, misalnya "Server A". 
 >> >>  - "Server A" akan memproses Request dan menetapkan "Session Cookie" di Browser Pengguna. <br/>
 >> >> Cookie ini berisi informasi unik, yang biasanya berupa "Session ID" (misalnya session_id=abd123 ), <br/>
->> >> yang mana 'Session ID' tersebut digunakan untuk mengidentifikasi Sesi Pengguna (User's Session) tersebut. <br/>
+>> >> yang mana 'Session ID' tersebut digunakan untuk mengidentifikasi Sesi milik Pengguna (User's Session) tersebut. <br/>
 >> >>  <br/>
 >> >> <2> Request Selanjutnya : <br/>
->> >> - Ketika User mengirimkan "Request Selanjutnya", Browser akan secara otomatis mengirimkan Session Cookie yang berisi "Session ID" yang sama (seperti Session ID yang sama dengan Request sebelumnya, yaitu session_id=abc123). <br/>
->> >> - "Load Balancer" menerima Request ini dan membaca Session ID dari Cookie. 
->> >> - Berdasarkan "Session ID" yang ada di Cookie, "Load Balancer" mengetahui bahwa Request ini berasal dari User yang sama dan harus diarahkan ke "Server A" (Server yang menangani Session Pertama, yakni pada Session tersebut 'Request Pertama' diproses)
->> >> <br/>
+>> >> 	- Ketika User mengirimkan "Request Selanjutnya", Browser akan secara otomatis mengirimkan Session Cookie yang berisi "Session ID" yang sama (seperti Session ID yang sama dengan Request sebelumnya, yaitu session_id=abc123). <br/>
+>> >> 	- "Load Balancer" menerima Request ini dan membaca Session ID dari Cookie. 
+>> >> 	- Berdasarkan "Session ID" yang ada di Cookie, "Load Balancer" mengetahui bahwa Request ini berasal dari User yang sama dan harus diarahkan ke "Server A" (Server yang menangani Session Pertama, yakni pada Session tersebut 'Request Pertama' diproses)
+>> >> <br/>   <br/> 
 >> >> <3> Menjaga Konsistensi Session : <br/>
->> >>  - Dengan cara ini, "Load Balancer" memastikkan seluruh Sesi Pengguna (User's Session) diproses oleh "Server yang sama" sepanjang sesi tersebut berlangsung. <
->> >>  - Hal ini menjaga Konsistensi Data Sesi Pengguna, yakni memastikkan bahwa Data terkait Pengguna (User) tetap tersedia selama User berinteraksi dengan Aplikasi atau Website (seperti memastikkan informasi User's Login, User's Preference, dan Informasi Shopping Cart tetap tersedia).
+>> >>  	- Dengan cara ini, "Load Balancer" memastikkan seluruh Sesi Pengguna (User's Session) diproses oleh "Server yang sama" sepanjang sesi tersebut berlangsung. 
+>> >> 	 - Hal ini menjaga Konsistensi Data Sesi Pengguna, yakni memastikkan bahwa Data terkait Pengguna (User) tetap tersedia selama User berinteraksi dengan Aplikasi atau Website (seperti memastikkan informasi User's Login, User's Preference, dan Informasi Shopping Cart tetap tersedia).
 >> >> 
 >> ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 >> 
