--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -2341,12 +2341,12 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >> >>  <br/>
 >> >> <2> Request Selanjutnya : <br/>
 >> >> 	- Ketika User mengirimkan "Request Selanjutnya", Browser akan secara otomatis mengirimkan Session Cookie yang berisi "Session ID" yang sama (seperti Session ID yang sama dengan Request sebelumnya, yaitu session_id=abc123). <br/>
->> >> 	- "Load Balancer" menerima Request ini dan membaca Session ID dari Cookie. 
->> >> 	- Berdasarkan "Session ID" yang ada di Cookie, "Load Balancer" mengetahui bahwa Request ini berasal dari User yang sama dan harus diarahkan ke "Server A" (Server yang menangani Session Pertama, yakni pada Session tersebut 'Request Pertama' diproses)
+>> >> 	- "Load Balancer" menerima Request ini dan membaca Session ID dari Cookie.  <br/>
+>> >> 	- Berdasarkan "Session ID" yang ada di Cookie, "Load Balancer" mengetahui bahwa Request ini berasal dari User yang sama dan harus diarahkan ke "Server A" (Server yang menangani Session Pertama, yakni pada Session tersebut 'Request Pertama' diproses) 
 >> >> <br/>   <br/> 
 >> >> <3> Menjaga Konsistensi Session : <br/>
->> >>  	- Dengan cara ini, "Load Balancer" memastikkan seluruh Sesi Pengguna (User's Session) diproses oleh "Server yang sama" sepanjang sesi tersebut berlangsung. 
->> >> 	 - Hal ini menjaga Konsistensi Data Sesi Pengguna, yakni memastikkan bahwa Data terkait Pengguna (User) tetap tersedia selama User berinteraksi dengan Aplikasi atau Website (seperti memastikkan informasi User's Login, User's Preference, dan Informasi Shopping Cart tetap tersedia).
+>> >>  	- Dengan cara ini, "Load Balancer" memastikkan seluruh Sesi Pengguna (User's Session) diproses oleh "Server yang sama" sepanjang sesi tersebut berlangsung.  <br/>
+>> >> 	 - Hal ini menjaga Konsistensi Data Sesi Pengguna, yakni memastikkan bahwa Data terkait Pengguna (User) tetap tersedia selama User berinteraksi dengan Aplikasi atau Website (seperti memastikkan informasi User's Login, User's Preference, dan Informasi Shopping Cart tetap tersedia).   <br/>
 >> >> 
 >> ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 >> 
