Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -2341,6 +2341,7 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >> >>  <br/>
 >> >> <2> Request Selanjutnya : <br/>
 >> >> 	- Ketika User mengirimkan "Request Selanjutnya", Browser akan secara otomatis mengirimkan Session Cookie yang berisi "Session ID" yang sama (seperti Session ID yang sama dengan Request sebelumnya, yaitu session_id=abc123). <br/>
+>> >> (Setiap kali User melakukan Request Baru, "Session Cookie" tersebut akan dikirimkan bersama dengan Request baru tersebut) <br/>
 >> >> 	- "Load Balancer" menerima Request ini dan membaca Session ID dari Cookie.  <br/>
 >> >> 	- Berdasarkan "Session ID" yang ada di Cookie, "Load Balancer" mengetahui bahwa Request ini berasal dari User yang sama dan harus diarahkan ke "Server A" (Server yang menangani Session Pertama, yakni pada Session tersebut 'Request Pertama' diproses) 
 >> >> <br/>   <br/> 
