Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -2348,6 +2348,23 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >> >> <3> Menjaga Konsistensi Session : <br/>
 >> >>  	- Dengan cara ini, "Load Balancer" memastikkan seluruh Sesi Pengguna (User's Session) diproses oleh "Server yang sama" sepanjang sesi tersebut berlangsung.  <br/>
 >> >> 	 - Hal ini menjaga Konsistensi Data Sesi Pengguna, yakni memastikkan bahwa Data terkait Pengguna (User) tetap tersedia selama User berinteraksi dengan Aplikasi atau Website (seperti memastikkan informasi User's Login, User's Preference, dan Informasi Shopping Cart tetap tersedia).   <br/>
+>> >>
+>> >> [-] "Session Cookie" merupakan bagian kecil data yang disimpan Web Server pada User's Browser. <br/>
+>> >> Cookie ini umumnya mengandung Unique Identifier (biasanya berupa "Session ID") yang membantu Server mengenali User pada Request setelahnya (Subsequent Request). <br/>
+>> >>  <br/>
+>> >> [-] "Session ID" pada Cookies merupakan sebuah Unique Identifier yang digunakan untuk tracking (melacak) & manage (mengelola) Sesi milik User (User's Session) pada Website. <br/>
+>> >> "Session ID" memiliki nilai yang Unik untuk setiap Session. <br/>
+>> >> Tujuan dari "Session ID" adalah untuk membedakan Session (to differentiate Sessions). <br/>
+>> >> "Session" merupakan Periode Interaksi antara User dan Web Aplikasi. <br/>
+>> >> <br/>
+>> >> [-] Load Balancer mengarahkan Request yang baru ke Server tertentu berdasarkan Session yang sama yang terjadi pada periode antara 'Request yang baru' dan 'Request yang sebelumnya'. <br/>
+>> >> ("Load Balancer directs the new Request to a certain Server based on The Same Session that happen during The New Request and the Previous Request.") <br/>
+>> >> <br/>
+>> >> [-] Load Balancer menggunakan Session ID ini untuk memverifikasi bahwa request baru berasal dari sesi yang sama dengan Request sebelumnya.  <br/>
+>> >> Session ID ini adalah kunci yang memungkinkan Load Balancer mengetahui bahwa Request baru adalah bagian dari sesi yang sedang berlangsung, dan bukan hanya Request dari pengguna yang sama secara umum. <br/>
+>> >>
+>> >>
+>> >>
 >> >> 
 >> ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 >> 
