Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -2365,44 +2365,44 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >> >>
 >> >> <br/>
 >> >> [-] "System Affinity" memastikkan Request selalu diarahkan ke Server yang sama <br/>
->> ("System Affininity" ensures Requests always be directed to the same System Resource, in this case, "System Resource" is Server) <br/>
->> <br/>
->> [-] "IP Hashing" merupakan Metode yang digunakan untuk mencapai "System Affinity". <br/>
->> yang mana "IP Hashing" berkerja sama dengan "Session Cookies" untuk mencapai "System Affinity". <br/>
->> <br/>
->> [-] "IP Hashing" merupakan Techhnique yang digunakan untuk menentukkan bagaimana Incoming Request (Request yang akan datang) akan di-distribusikan ke Berbagai Server berdasarkan "IP Address" milik Client yang membuat Request. <br/>
->> ini merupakan bentuk dari "Load Balancing" dimana Load Balancer menggunakan "IP Address" milik Client untuk memastikkan Server mana yang seharusnya menangani Request. <br/>
->> <br/>
->>
->> [-] Cara Kerja "IP Hashing" : <br/>
->> Saat "Request masuk", Load Balancer melihat "IP Address" milik User, kemudian Load Balancer mengaplikasikan "Hashing Algorithm", <br/>
->> ini menghasilkan "Hash Value" yang selalu menunjuk ke "Server yang sama" setiap kali "IP Address yang sama" membuat Request. <br/>
->> Sebagai Contoh : <br/>
->> - Jika "User A" ('User A' memiliki IP Address 192.168.1.5 ) mengunjungi Website hari ini, "User A" akan diarahkan ke "Server 1". <br/>
->> - Jika "User A" mengunjungi Website lagi pada besok hari, "User A" masih diarahkan ke "Server 1", karena "Hash Value" (Nilai Hash) dari IP Address dari "User A" akan selalu dipetakan ke "Server 1" <br/>
->> - Sementara itu, "User B" ('User B' memiliki IP Address 192.168.1.6 ) akan diarahkan ke "Server 2",  dan seterusnya. <br/>
->> ("User B" diarahkan ke Server yang berbeda dengan "User A" karena "User A" dan "User B" masing-masing memiliki IP Address yang berbeda). <br/>
->> Hal ini memastikkan "Session Stickiness" untuk User, yang berarti Request-Request milik User yang sama akan selalu diarahkan ke Server yang sama. <br/>
->> yang mana hal ini sangat bermanfaat untuk "Stateful Systems" dimana melakukan Maintain User Data antar Request sangatlah penting (seperti untuk mengingat User's Preference, dan menjaga agar User tetap Login). <br/>
->> Dan juga hal ini menghindari dimana Request milik User diarahkan ke Server berbeda yang tidak mempunyai Data State miliik User tersebut. <br/>
->> <br/>
->> [-] Contoh Penerapan "IP Hashing" Pada Shopping Cart : <br/>
->> Misalnya kita mempunyai Online Store dengan Multiple Server dan kita ingin memastikkan saat User menambahkan Item ke Keranjang Belanja (Shopping Cart) , Keranjang tersebut selalu Konsisten untuk Inteksi selanjutnya. <br/>
->> Seperti Contoh berikut ini : <br/>
->> Misalnya kita mempunyai "Load Balancer", "Shopping Cart", dan "3 Web Server" (Server 1, Server 2, Server 3). <br/>
->>  <br/>
->> - Tanpa "IP Hashing" (Random Load Balancing) : <br/>
->> Pada Case ini, Load Balancer tidak menggunakan "IP Hashing" untuk mengarahkan Traffic, <br/>
->> yang mana Load Balancer dapat menggunakan "Round-Robin" atau "Random Distribution" Method, <br/>
->> yang berarti User's Request dapat diarahkan ke Server mana saja. <br/>
->> <br/>
->> Berikut ini Step-by-Step Process tanpa "IP Hashing" : <br/>
->> <1> User A (dari IP Address 192.168.1.5 ) mengunjungi Website untuk pertama kali : <br/>
->> => Load Balancer secara Random mengarahkan (memberi Rute / Route) Request milik User A ke Server 1 <br/>
->> => "User A" menambahkan sebuah Product ke Shopping Cart, dan "Server 1" menyimpan Data Shopping Cart. <br/>
->>  <br/>
->> <2> 
->>
+>> >>  ("System Affininity" ensures Requests always be directed to the same System Resource, in this case, "System Resource" is Server) <br/>
+>> >> <br/>
+>> >>  [-] "IP Hashing" merupakan Metode yang digunakan untuk mencapai "System Affinity". <br/>
+>> >>  yang mana "IP Hashing" berkerja sama dengan "Session Cookies" untuk mencapai "System Affinity". <br/>
+>>  >>  <br/>
+>> >>  [-] "IP Hashing" merupakan Techhnique yang digunakan untuk menentukkan bagaimana Incoming Request (Request yang akan datang) akan di-distribusikan ke Berbagai Server berdasarkan "IP Address" milik Client yang membuat Request. <br/>
+>> >>  ini merupakan bentuk dari "Load Balancing" dimana Load Balancer menggunakan "IP Address" milik Client untuk memastikkan Server mana yang seharusnya menangani Request. <br/>
+>> >> <br/>
+>>  >> 
+>>  >>  [-] Cara Kerja "IP Hashing" : <br/>
+>> >>  Saat "Request masuk", Load Balancer melihat "IP Address" milik User, kemudian Load Balancer mengaplikasikan "Hashing Algorithm", <br/>
+>> >>  ini menghasilkan "Hash Value" yang selalu menunjuk ke "Server yang sama" setiap kali "IP Address yang sama" membuat Request. <br/>
+>>  >> Sebagai Contoh : <br/>
+>>  >> - Jika "User A" ('User A' memiliki IP Address 192.168.1.5 ) mengunjungi Website hari ini, "User A" akan diarahkan ke "Server 1". <br/>
+>> >>  - Jika "User A" mengunjungi Website lagi pada besok hari, "User A" masih diarahkan ke "Server 1", karena "Hash Value" (Nilai Hash) dari IP Address dari "User A" akan selalu dipetakan ke "Server 1" <br/>
+>> >>  - Sementara itu, "User B" ('User B' memiliki IP Address 192.168.1.6 ) akan diarahkan ke "Server 2",  dan seterusnya. <br/>
+>>  >> ("User B" diarahkan ke Server yang berbeda dengan "User A" karena "User A" dan "User B" masing-masing memiliki IP Address yang berbeda). <br/>
+>> >>  Hal ini memastikkan "Session Stickiness" untuk User, yang berarti Request-Request milik User yang sama akan selalu diarahkan ke Server yang sama. <br/>
+>> >>  yang mana hal ini sangat bermanfaat untuk "Stateful Systems" dimana melakukan Maintain User Data antar Request sangatlah penting (seperti untuk mengingat User's Preference, dan menjaga agar User tetap Login). <br/>
+>> >>  Dan juga hal ini menghindari dimana Request milik User diarahkan ke Server berbeda yang tidak mempunyai Data State miliik User tersebut. <br/>
+>>  >> <br/>
+>> >>  [-] Contoh Penerapan "IP Hashing" Pada Shopping Cart : <br/>
+>> >>  Misalnya kita mempunyai Online Store dengan Multiple Server dan kita ingin memastikkan saat User menambahkan Item ke Keranjang Belanja (Shopping Cart) , Keranjang tersebut selalu Konsisten untuk Inteksi selanjutnya. <br/>
+>> >>  Seperti Contoh berikut ini : <br/>
+>>  >>  Misalnya kita mempunyai "Load Balancer", "Shopping Cart", dan "3 Web Server" (Server 1, Server 2, Server 3). <br/>
+>>  >>  <br/>
+>> >>  - Tanpa "IP Hashing" (Random Load Balancing) : <br/>
+>>  >> Pada Case ini, Load Balancer tidak menggunakan "IP Hashing" untuk mengarahkan Traffic, <br/>
+>> >>  yang mana Load Balancer dapat menggunakan "Round-Robin" atau "Random Distribution" Method, <br/>
+>> >>  yang berarti User's Request dapat diarahkan ke Server mana saja. <br/>
+>> >>  <br/>
+>> >>  Berikut ini Step-by-Step Process tanpa "IP Hashing" : <br/>
+>> >>  <1> User A (dari IP Address 192.168.1.5 ) mengunjungi Website untuk pertama kali : <br/>
+>> >>    => Load Balancer secara Random mengarahkan (memberi Rute / Route) Request milik User A ke Server 1 <br/>
+>> >> => "User A" menambahkan sebuah Product ke Shopping Cart, dan "Server 1" menyimpan Data Shopping Cart. <br/>
+>> >>  <br/>
+>> >> <2> 
+>> >>
 >> >> 
 >> >> 
 >> ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
