Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -2389,8 +2389,8 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >> >>  [-] Contoh Penerapan "IP Hashing" Pada Shopping Cart : <br/>
 >> >>  Misalnya kita mempunyai Online Store dengan Multiple Server dan kita ingin memastikkan saat User menambahkan Item ke Keranjang Belanja (Shopping Cart) , Keranjang tersebut selalu Konsisten untuk Inteksi selanjutnya. <br/>
 >> >>  Seperti Contoh berikut ini : <br/>
->>  >>  Misalnya kita mempunyai "Load Balancer", "Shopping Cart", dan "3 Web Server" (Server 1, Server 2, Server 3). <br/>
->>  >>  <br/>
+>>  >>  Misalnya kita mempunyai "Load Balancer", "Shopping Cart", dan "3 Web Server" (Server 1, Server 2, Server 3). <br/> <br/>
+>>  >>  
 >> >>  - Tanpa "IP Hashing" (Random Load Balancing) : <br/>
 >>  >> Pada Case ini, Load Balancer tidak menggunakan "IP Hashing" untuk mengarahkan Traffic, <br/>
 >> >>  yang mana Load Balancer dapat menggunakan "Round-Robin" atau "Random Distribution" Method, <br/>
@@ -2401,7 +2401,14 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >> >>    => Load Balancer secara Random mengarahkan (memberi Rute / Route) Request milik User A ke Server 1 <br/>
 >> >> => "User A" menambahkan sebuah Product ke Shopping Cart, dan "Server 1" menyimpan Data Shopping Cart. <br/>
 >> >>  <br/>
->> >> <2> 
+>> >> <2> "User A" kembali mengunjungi Website beberapa menit dikemudian ("User A" masih dari IP Address 192.168.1.5 ) : <br/>
+>> >> => Load Balancer "secara acak" (randomly) memilih Server lainnya, misalnya "Server 2". <br/>
+>> >> => "Server 2" tidak mempunyai Data Shopping Cart milik "User A" (karena data ata Shopping Cart milik "User A" disimpan di "Server 1"), Sehingga Shopping Cart nya kosong. <br/>
+>> >> Misalnya sebelumnya "User A" sudah memasukkan Produk "Apel" ke Shopping Cart, kemudian "User A" ingin menambahkan Produk "Keju" ke Shopping Cart, <br/>
+>> >> yang mana saat "User A" menambahkan Product "Keju" ke Shopping Cart, namun Prduct "Apel" tidak ada di Shopping Cart. <br/>
+>> >> yang mana hal ini bisa menyebabkan "Poor User Experience" dan Frustasi bagi Customer. <br/>
+>> >>
+>> >>
 >> >>
 >> >> 
 >> >> 
